@@ -25,6 +25,7 @@ from config import panda_config
 from pandalogger.PandaLogger import PandaLogger
 from AdderPluginBase import AdderPluginBase
 from taskbuffer import EventServiceUtils
+from taskbuffer import JobUtils
 from MailUtils import MailUtils
 import DataServiceUtils
 
@@ -350,7 +351,7 @@ class AdderAtlasPlugin (AdderPluginBase):
                             zipFiles[file.lfn]['scope'] = file.scope
                             zipFiles[file.lfn]['rse'] = dsDestMap[fileDestinationDBlock]
                     # for subscription
-                    if self.job.prodSourceLabel in ['managed','test','software','rc_test','rc_test2','ptest','user','rucio_test'] and \
+                    if self.job.prodSourceLabel in ['managed','test','software','user','rucio_test'] + JobUtils.list_ptest_prod_sources and \
                            re.search('_sub\d+$',fileDestinationDBlock) != None and (not self.addToTopOnly) and \
                            self.job.destinationSE != 'local':
                         if self.siteMapper == None:
