@@ -8,6 +8,7 @@ import datetime
 import ProcessGroups
 import EventServiceUtils
 import ErrorCode
+from . import JobUtils
 from threading import Lock
 from DBProxyPool import DBProxyPool
 from brokerage.SiteMapper import SiteMapper
@@ -139,7 +140,7 @@ class TaskBuffer:
                     _logger.debug("storeJobs : end for %s DN is blocked 1" % user)
                     return []
             # set parameters for user jobs
-            if len(jobs) > 0 and (jobs[0].prodSourceLabel in ['user','panda','ptest','rc_test','rc_test2']) \
+            if len(jobs) > 0 and (jobs[0].prodSourceLabel in ['user','panda'] + JobUtils.list_ptest_prod_sources) \
                    and (not jobs[0].processingType in ['merge','unmerge']):
                 # get DB proxy
                 proxy = self.proxyPool.getProxy()
@@ -303,7 +304,7 @@ class TaskBuffer:
                         and (not jobs[0].processingType in ['merge','unmerge']):
                     job.jobDefinitionID = userJobID
                 # set jobsetID
-                if job.prodSourceLabel in ['user','panda','ptest','rc_test','rc_test2']:
+                if job.prodSourceLabel in ['user','panda'] + JobUtils.list_ptest_prod_sources:
                     job.jobsetID = userJobsetID
                 # set specialHandling
                 if job.prodSourceLabel in ['user','panda']:
@@ -409,7 +410,7 @@ class TaskBuffer:
                     # mapping of jobsetID for event service
                     if origEsJob:
                         esJobsetMap[esIndex] = job.jobsetID
-                if job.prodSourceLabel in ['user','panda','ptest','rc_test','rc_test']:                
+                if job.prodSourceLabel in ['user','panda'] + JobUtils.list_ptest_prod_sources:                
                     ret.append((job.PandaID,job.jobDefinitionID,{'jobsetID':job.jobsetID}))
                 else:
                     ret.append((job.PandaID,job.jobDefinitionID,job.jobName))                
