@@ -1,5 +1,8 @@
 Release Notes
 
+* 10/30/2018
+  * added list_ptest_prod_sources
+
 * 10/22/2018
   * added proc_status
   * sending ioIntensity
